log
In file included from ./inc/map.hpp:7,
                 from ./inc/utility/libs.hpp:18,
                 from src/main.cpp:1:

./inc/utility/pair.hpp: In instantiation of 'ft::pair<T1, T2>::pair(const ft::pair<U, V>&) [with U = ft::tree_iterator<ft::pair<int, int> >; V = bool; T1 = ft::tree_iterator<int>; T2 = bool]':
./inc/map.hpp:123:25:   required from 'ft::pair<ft::tree_iterator<T>, bool> ft::map<Key, T, Compare, Alloc>::insert(const value_type&) [with Key = int; T = int; Compare = std::less<int>; Alloc = std::allocator<ft::pair<const int, int> >; ft::map<Key, T, Compare, Alloc>::value_type = ft::pair<int, int>]'
src/main.cpp:6:12:   required from here
./inc/utility/pair.hpp:25:50: error: no matching function for call to 'ft::tree_iterator<int>::tree_iterator(const first_type&)'
   25 |                 pair(const ft::pair<U, V> &pr) : first(pr.first), second(pr.second) {}
      |                                                  ^~~~~~~~~~~~~~~



In file included from ./inc/red_black/tree.hpp:6,
                 from ./inc/map.hpp:12,
                 from ./inc/utility/libs.hpp:18,
                 from src/main.cpp:1:
./inc/red_black/iterator.hpp:29:17: note: candidate: 'ft::tree_iterator<T>::tree_iterator(const ft::tree_iterator<T>&) [with T = int]'
   29 |                 tree_iterator(const tree_iterator &x) : _ptr(x._ptr) {}
      |                 ^~~~~~~~~~~~~
./inc/red_black/iterator.hpp:29:52: note:   no known conversion for argument 1 from 'const first_type' {aka 'const ft::tree_iterator<ft::pair<int, int> >'} to 'const ft::tree_iterator<int>&'
   29 |                 tree_iterator(const tree_iterator &x) : _ptr(x._ptr) {}
      |                               ~~~~~~~~~~~~~~~~~~~~~^
./inc/red_black/iterator.hpp:26:26: note: candidate: 'ft::tree_iterator<T>::tree_iterator(ft::tree_iterator<T>::pointer) [with T = int; ft::tree_iterator<T>::pointer = int*]'
   26 |                 explicit tree_iterator(pointer ptr) : _ptr(ptr) {}
      |                          ^~~~~~~~~~~~~
./inc/red_black/iterator.hpp:26:48: note:   no known conversion for argument 1 from 'const first_type' {aka 'const ft::tree_iterator<ft::pair<int, int> >'} to 'ft::tree_iterator<int>::pointer' {aka 'int*'}
   26 |                 explicit tree_iterator(pointer ptr) : _ptr(ptr) {}
      |                                        ~~~~~~~~^~~
./inc/red_black/iterator.hpp:23:17: note: candidate: 'ft::tree_iterator<T>::tree_iterator() [with T = int]'
   23 |                 tree_iterator(void) : _ptr(NULL) {}
      |                 ^~~~~~~~~~~~~
./inc/red_black/iterator.hpp:23:17: note:   candidate expects 0 arguments, 1 provided
In file included from ./inc/map.hpp:12,
                 from ./inc/utility/libs.hpp:18,
                 from src/main.cpp:1:
./inc/red_black/tree.hpp: In instantiation of 'ft::pair<ft::tree_iterator<T>, bool> ft::tree<T, Compare, Alloc>::__insert_node(const value_type&) [with T = ft::pair<int, int>; Compare = ft::map<int, int>::value_compare; Alloc = std::allocator<ft::node<ft::pair<int, int> > >; ft::tree<T, Compare, Alloc>::value_type = ft::pair<int, int>]':
./inc/red_black/tree.hpp:43:11:   required from 'ft::pair<ft::tree_iterator<T>, bool> ft::tree<T, Compare, Alloc>::insert(const value_type&) [with T = ft::pair<int, int>; Compare = ft::map<int, int>::value_compare; Alloc = std::allocator<ft::node<ft::pair<int, int> > >; ft::tree<T, Compare, Alloc>::value_type = ft::pair<int, int>]'
./inc/map.hpp:123:23:   required from 'ft::pair<ft::tree_iterator<T>, bool> ft::map<Key, T, Compare, Alloc>::insert(const value_type&) [with Key = int; T = int; Compare = std::less<int>; Alloc = std::allocator<ft::pair<const int, int> >; ft::map<Key, T, Compare, Alloc>::value_type = ft::pair<int, int>]'
src/main.cpp:6:12:   required from here
./inc/red_black/tree.hpp:63:46: error: no matching function for call to 'ft::tree_iterator<ft::pair<int, int> >::tree_iterator(ft::node<ft::pair<int, int> >*&)'
   63 |                         return ft::make_pair(iterator(_root), true);
      |                                              ^~~~~~~~~~~~~~~
In file included from ./inc/red_black/tree.hpp:6,
                 from ./inc/map.hpp:12,
                 from ./inc/utility/libs.hpp:18,
                 from src/main.cpp:1:
./inc/red_black/iterator.hpp:29:17: note: candidate: 'ft::tree_iterator<T>::tree_iterator(const ft::tree_iterator<T>&) [with T = ft::pair<int, int>]'
   29 |                 tree_iterator(const tree_iterator &x) : _ptr(x._ptr) {}
      |                 ^~~~~~~~~~~~~
./inc/red_black/iterator.hpp:29:52: note:   no known conversion for argument 1 from 'ft::tree<ft::pair<int, int>, ft::map<int, int>::value_compare, std::allocator<ft::node<ft::pair<int, int> > > >::pointer' {aka 'ft::node<ft::pair<int, int> >*'} to 'const ft::tree_iterator<ft::pair<int, int> >&'
   29 |                 tree_iterator(const tree_iterator &x) : _ptr(x._ptr) {}
      |                               ~~~~~~~~~~~~~~~~~~~~~^
./inc/red_black/iterator.hpp:26:26: note: candidate: 'ft::tree_iterator<T>::tree_iterator(ft::tree_iterator<T>::pointer) [with T = ft::pair<int, int>; ft::tree_iterator<T>::pointer = ft::pair<int, int>*]'
   26 |                 explicit tree_iterator(pointer ptr) : _ptr(ptr) {}
      |                          ^~~~~~~~~~~~~
./inc/red_black/iterator.hpp:26:48: note:   no known conversion for argument 1 from 'ft::tree<ft::pair<int, int>, ft::map<int, int>::value_compare, std::allocator<ft::node<ft::pair<int, int> > > >::pointer' {aka 'ft::node<ft::pair<int, int> >*'} to 'ft::tree_iterator<ft::pair<int, int> >::pointer' {aka 'ft::pair<int, int>*'}
   26 |                 explicit tree_iterator(pointer ptr) : _ptr(ptr) {}
      |                                        ~~~~~~~~^~~
./inc/red_black/iterator.hpp:23:17: note: candidate: 'ft::tree_iterator<T>::tree_iterator() [with T = ft::pair<int, int>]'
   23 |                 tree_iterator(void) : _ptr(NULL) {}
      |                 ^~~~~~~~~~~~~
./inc/red_black/iterator.hpp:23:17: note:   candidate expects 0 arguments, 1 provided
make: *** [.build/ft/main.o] Error 1
